skin/frontend/reman/default/css/styles.css
/* ... */
.f-fix        { float:left; width:100%; }
.no-display   { display:none; }
.no-margin    { margin:0 !important; }
.no-padding   { padding:0 !important; }
.no-bg        { background:none !important; }
/* ======================================================================================= */


/* Layout ================================================================================ */
.wrapper { min-width:954px; }
.page {}
.page-print { background:#fff; padding:25px 30px; text-align:left; }
.page-empty { background:#fff; padding:20px; text-align:left; }
.page-popup { background:#fff; padding:25px 30px; text-align:left; }
.main-container {
	position:relative;
	top:-15px;
}
.main { width:850px; margin:0 auto;  padding:25px 25px 0px; text-align:left; 
	background-image: url("http://etereman.com/images/content-main-fade-bg.png");
	background-color:#F2F2F2;
	background-repeat: repeat-x;
}

/* Base Columns */
.col-left { float:left; width:195px; padding:0 0 1px; }
.col-main { float:left; /*width:685px;*/ padding:0 0 1px; 
	background-repeat: no-repeat;
	background-color: #F2F2F2;
	padding: 15px;
	border-radius: 15px;
	width:601px;
	min-height:400px;
}
.col-right { 
	float:right; 
	width:182px; 
	padding:0 0 1px; 
	background-repeat: no-repeat;
	background-color: #F2F2F2;
	padding: 15px 10px 15px 10px;
	border-radius: 15px; 
	height:300px;
}

.col-right-productinfo { 
	float:right; 
	width:182px; 
	padding:0 0 1px; 
	background-repeat: no-repeat;
	background-color: #F2F2F2;
	padding: 15px 10px 15px 10px;
	border-radius: 15px; 
	height: 300px;
	margin-bottom: 15px;
}


#black-mask{
	width: 100%;
	height: 100%;
	background-color: #000;
	position: absolute;
	top: 0px;
	left: 9px;
	width: 901px;
	z-index: 1;
	opacity: 0.3;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
}

/* 1 Column Layout */
.col1-layout .col-main { float:none; width:auto; }

/* 2 Columns Layout */
.col2-left-layout .col-main { float:right; }
.col2-right-layout .col-main {}

/* 3 Columns Layout */
.col3-layout .col-main { width:475px; margin-left:17px; }
.col3-layout .col-wrapper { float:left; width:687px; }
.col3-layout .col-wrapper .col-main { float:right; }

/* Content Columns */
.col2-set .col-1 { float:left; width:48.5%; }

.col2-set .col-2 { float:right; width:48.5%; }

/* Custom Reman login */
.col2-set_reman .col-2_reman {/* width:45.5%; margin:0 auto;*/ }


.col2-set .col-narrow { width:32%; }
.col2-set .col-wide { width:65%; }

.col3-set .col-1 { float:left; width:32%; }
.col3-set .col-2 { float:left; width:32%; margin-left:2%; }
.col3-set .col-3 { float:right; width:32%; }

.col4-set .col-1 { float:left; width:23.5%; }
.col4-set .col-2 { float:left; width:23.5%; margin:0 2%; }
.col4-set .col-3 { float:left; width:23.5%; }
.col4-set .col-4 { float:right; width:23.5%; }
/* ======================================================================================= */


/* Global Styles ========================================================================= */
/* Form Elements */
input,select,textarea,button { font:12px/15px Arial, Helvetica, sans-serif; vertical-align:middle; color:#2f2f2f; }
input.input-text,select,textarea { background:#fff; border:1px solid #b6b6b6; }
input.input-text,textarea { padding:2px; }
select { padding:1px; }
select option { padding-right:10px; }
select.multiselect option { border-bottom:1px solid #b6b6b6; padding:2px 5px; }
select.multiselect option:last-child { border-bottom:0; }
textarea { overflow:auto; }
input.radio { margin-right:3px; }
input.checkbox { margin-right:3px; }
input.qty { width:2.5em !important; }
button.button::-moz-focus-inner { padding:0; border:0; } /* FF Fix */
button.button { -webkit-border-fit:lines; } /* <- Safari & Google Chrome Fix */
button.button { overflow:visible; width:auto; border:0; padding:0; margin:0; background:transparent; cursor:pointer; }
button.button span { display:block; height:19px; border:1px solid #de5400; background:#f18200; padding:0 8px; font:bold 12px/19px Arial, Helvetica, sans-serif; text-align:center; white-space:nowrap; color:#fff; }
button.button span span { border:0; padding:0; }
button.disabled span { border-color:#bbb !important; background:#bbb !important; }

button.btn-checkout span { height:40px; border:0; background:url(../../../shop/default/images/btn_checkout.gif) 0 0 no-repeat; padding:0 0 0 9px; font:bold 15px/40px Arial, Helvetica, sans-serif; color:#fff; }
button.btn-checkout span span { background-position:100% 0; padding:0 25px 0 16px; }
button.btn-checkout.no-checkout span { background-position:0 100%; color:#b8baba; }
button.btn-checkout.no-checkout span span { background-position:100% 100%; }

p.control input.checkbox,
p.control input.radio { margin-right:6px; }
/* Form Highlight */
input.input-text:focus,select:focus,textarea:focus { background-color:#edf7fd; }
/*.highlight { background:#efefef; }*/

/* Form lists */
/* Grouped fields */
/*.form-list { width:535px; margin:0 auto; overflow:hidden; }*/
.form-list li { margin:0 0 8px; }
.form-list label { float:left; color:#666; font-weight:bold; position:relative; z-index:0; font-size:15px; margin-bottom:4px; }
.form-list label.required {}
.form-list label.required em { float:right; font-style:normal; color:#eb340a; position:absolute; top:0; right:-8px; }
.form-list li.control label { float:none; }
.form-list li.control input.radio,
.form-list li.control input.checkbox { margin-right:6px; }
.form-list li.control .input-box { clear:none; display:inline; width:auto; }
/*.form-list li.fields { margin-right:-15px; }*/
.form-list .input-box { display:block; clear:both; width:260px; }
/*Custom Reman*/
.form-list_reman .input-box_reman { display:block; float:left; width:210px;}
.form-list_reman label { float:left; color:#000; font-weight:bold; position:relative; z-index:0;}
.form-list_reman label.required em { float:right; font-style:normal; color:#eb340a; position:absolute; top:0; right:-8px; }

.form-list .field { float:left; width:275px; }
/* ... */

